# rusty-timetracker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  time_tracker.rs  widget.rs
src/data/: day_log.rs  tracking_day.rs  tracking_week.rs
src/manager/: directory_manager.rs
src/window/: time_tracker.rs  widget.rs
