[package]
name = "timetracker"
description = "Simple time tracking for work hours"
version = "0.1.0"
authors = ["Achsion"]
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
eframe = "0.21.0"
image = "0.24.5"
serde = { version = "1.0.152", features = ["derive"] }
