[package]
name = "timetracker"
description = "Simple time tracking for work hours"
version = "0.1.0"
authors = ["Achsion"]
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
csv = "1.2.1"
directories = "4.0.1"
eframe = { version = "0.21.3", features = ["persistence"] }
image = "0.24.5"
serde = { version = "1.0.154", features = ["derive"] }
