[package]
name = "rusty-timetracker"
description = "Simple time tracking for work hours"
version = "0.1.0"
authors = ["Achsion"]
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
directories = "5.0.1"
eframe = { version = "0.23.0", features = ["persistence"] }
grouping_by = "0.2.2"
image = "0.24.7"
serde = { version = "1.0.193", features = ["derive"] }
